<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="error_no_internet">No Internet Connection</string>
    <string name="error_timeout">Oops! Slow Connection</string>
    <string name="error_unknown">Unknown Error! That’s all we know</string>
    <string name="description">Description:\n\n %1$s</string>
    <string name="product">Product</string>
    <string name="favorite">Favorite</string>

    <string name="app_name">AI Chat Assistant</string>
    <string name="back">Back</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="setting">Setting</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="follow_system">Follow System</string>
    <string name="store">Store</string>
    <string name="manage_subscription">Manage subscription</string>
    <string name="share_app">Share app</string>
    <string name="rate_us">Rate us</string>
    <string name="term">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="can_not_preview_ads">Can not preview ads on this time</string>

</resources>